--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.8",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.11.17",
     "hamburger-react": "^2.5.1",
     "primereact": "^10.8.5",
     "react": "^18.1.0",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.3.0",
     "react-images": "^1.2.0-beta.7",
     "react-intersection-observer": "^9.13.1",
